Fix missaligned items

--- a/src/global.scss
+++ b/src/global.scss
@@ -24,7 +24,6 @@
   margin-right: 0px;
   padding-right: 0px;
   margin-left: 0px;
-
   padding-bottom: 10px;
   padding-top: 10px;
 }
@@ -100,7 +99,7 @@ h4.field-label {
 }
 h4.field-value {
   font-size: 15px;
-  margin-top: 20px;
+  margin-top: 10px;
   position: absolute;
   width: 100%;
   text-align: center;
@@ -410,6 +409,10 @@ ion-button {
   width: 100%;
 }
 
+.internal-item {
+    margin-right: -16px;
+    margin-left: -20px;
+}
 .currency-label {
   position: absolute;
   font-size: 13px;
